--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,3 +1,132 @@
 .el-form-item {
   width: 100%;
+  margin: 0;
+  .el-input-number,
+  .el-select,
+  .el-cascader,
+  .el-input {
+    width: 100%;
+  }
+}
+.el-checkbox-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+.prForm {
+  .el-col {
+    margin: 0 0 10px 0;
+  }
+}
+html {
+  overflow-x: auto;
+  overflow-y: scroll;
+}
+
+body,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+form,
+fieldset,
+input,
+p,
+blockquote,
+th,
+td {
+  padding: 0;
+  margin: 0;
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3,
+h4,
+h4,
+h5 {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  padding: 0 10px;
+  color: #666;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  text-align: left;
+  background-color: #fff;
+}
+
+select {
+  font-size: 12px;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+fieldset,
+img {
+  border: 0 none;
+}
+
+fieldset {
+  padding: 0;
+  margin: 0;
+}
+
+fieldset p {
+  padding: 0 0 0 8px;
+  margin: 0;
+}
+
+legend {
+  display: none;
+}
+
+address,
+caption,
+em,
+strong,
+th,
+i {
+  font-style: normal;
+  font-weight: 400;
+}
+
+table caption {
+  margin-left: -1px;
+}
+
+hr {
+  clear: both;
+  overflow: hidden;
+  height: 2px;
+  margin: 5px 0;
+  border-top: 1px solid #e4e4e4;
+  border-bottom: 1px solid #fff;
+  border-width: 1px 0;
+}
+
+ol,
+ul {
+  list-style-image: none;
+  list-style-position: outside;
+  list-style-type: none;
+}
+
+caption,
+th {
+  text-align: left;
+}
+
+q:before,
+q:after,
+blockquote:before,
+blockquote:after {
+  content: ””;
 }
