--- a/src/style/index.less
+++ b/src/style/index.less
@@ -8,6 +8,18 @@
     width: 100%;
   }
 }
+.el-header,
+.el-main {
+  background-color: #fff;
+  border-radius: 10px;
+}
+html,
+body,
+#app,
+.el-container {
+  height: 100%;
+  background-color: rgb(232, 228, 228);
+}
 .el-checkbox-group {
   display: flex;
   flex-wrap: wrap;
@@ -17,9 +29,7 @@
     margin: 0 0 10px 0;
   }
 }
-html {
-  height: 100%;
-}
+
 html {
   overflow-x: auto;
   overflow-y: scroll;
@@ -133,3 +143,4 @@ blockquote:before,
 blockquote:after {
   content: ””;
 }
+@import "./iconfont/iconfont.css";
