二维码扫描

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -144,3 +144,13 @@ blockquote:after {
   content: ””;
 }
 @import "./iconfont/iconfont.css";
+.insderContainer {
+  float: left;
+  width: 100px;
+  height: 1px;
+}
+.container {
+  float: left;
+  width: 100px;
+  height: 100px;
+}
